tests/errors/sem.expected-constant.subscript-decl.or
main :: () -> void {
    x := 10;
    @subscript y := x;;
    y;
};
